--- a/GameOne_Server/.classpath
+++ b/GameOne_Server/.classpath
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="src" path="java"/>
+	<classpathentry kind="lib" path="libs/c3p0-0.9.5-pre5.jar"/>
+	<classpathentry kind="lib" path="libs/mchange-commons-java-0.2.6.2.jar"/>
+	<classpathentry kind="lib" path="libs/mysql-connector-java-5.1.26.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="libs/weupnp-0.1.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/GameOne_Commons"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
