--- a/GameOne_Client/build.xml
+++ b/GameOne_Client/build.xml
@@ -10,6 +10,7 @@
 	<target name="dist" depends="jar">
 		<mkdir dir="${build.dist}/log" />
 		<mkdir dir="${build.dist}/configs" />
+		<mkdir dir="${build.dist}/images" />
 		<copy todir="${build.dist}/configs">
 			<fileset dir="configs">
 				<include name="*.properties" />
@@ -17,6 +18,11 @@
 			<fileset dir="${commons}/configs">
 				<include name="log.cfg" />
 				<include name="Threads.properties" />
+			</fileset>
+		</copy>
+		<copy todir="${build.dist}/images">
+			<fileset dir="images">
+				<include name="**/*" />
 			</fileset>
 		</copy>
 	</target>
