Game configs, part II

--- a/GameOne_Server/configs/Games.properties
+++ b/GameOne_Server/configs/Games.properties
@@ -9,3 +9,27 @@ QueenSingleStep = False
 # Burn players for not eating enemy players when its possible to do so.
 # Default: True
 BurnPlayers = True
+
+# Should we paint the recent movements on the board?
+# Default: True
+CheckersPaintMoves = True
+
+# Should we paint the route on the board?
+# Default: True
+CheckersPaintRoute = True
+
+#=============================================================
+#                          Chess
+#=============================================================
+
+# Should we paint the recent movements on the board?
+# Default: True
+ChessPaintMoves = True
+
+# Should we paint the route on the board?
+# Default: True
+ChessPaintRoute = True
+
+# Should we allow choosing upon promotion or directly transform to queen?
+# Default: True
+ChooseOnPromote = True
