Addition of Access database as backup database where mysql is not installed.

--- a/GameOne_Server/configs/Database.properties
+++ b/GameOne_Server/configs/Database.properties
@@ -1,12 +1,22 @@
-URL = jdbc:mysql://localhost/gameOne
-#URL = jdbc:hsqldb:hsql://localhost/gameOne
-#URL = jdbc:sqlserver://localhost/database=gameOne/user=sa/password=
-
-Login = root
-Password = 
-
+#=============================================================
+#                          Global
+#=============================================================
 # Maximum database connections (minimum 10, default).
 MaximumDbConnections = 10
 
 # Idle connections expiration time (0 = never expire, default).
 MaximumDbIdleTime = 0
+
+#=============================================================
+#                          MySql
+#=============================================================
+MysqlUrl = jdbc:mysql://localhost/gameOne
+MysqlLogin = root
+MysqlPassword = 
+
+#=============================================================
+#                          Access
+#=============================================================
+AccessUrl = jdbc:ucanaccess://gameOne.accdb;
+AccessLogin = 
+AccessPassword = 
