--- a/GameOne_Server/build.xml
+++ b/GameOne_Server/build.xml
@@ -16,6 +16,7 @@
 			<fileset dir="${basedir}">
 				<include name="serverLoop.sh" />
 				<include name="startServer.*" />
+				<include name="gameOne.accdb" />
 			</fileset>
 		</copy>
 		<copy todir="${build.dist}/libs">
