--- a/GameOne_Client/.project
+++ b/GameOne_Client/.project
@@ -3,6 +3,7 @@
 	<name>GameOne_Client</name>
 	<comment></comment>
 	<projects>
+		<project>GameOne_Commons</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
