Fix a small login issue + cleanup.

--- a/GameOne_Commons/configs/log.cfg
+++ b/GameOne_Commons/configs/log.cfg
@@ -8,8 +8,7 @@
 #handlers = java.util.logging.ConsoleHandler
 
 # To also add the FileHandler, use the following line instead.
-handlers = java.util.logging.FileHandler,\
-           java.util.logging.ConsoleHandler
+handlers = java.util.logging.FileHandler,java.util.logging.ConsoleHandler
 
 # Default global logging level.
 # This specifies which kinds of events are logged across all loggers. 
@@ -22,7 +21,7 @@ handlers = java.util.logging.FileHandler,\
 # Describes specific configuration info for Handlers.
 ############################################################
 
-# default file output is in user's home directory.
+# Default file output is in user's home directory.
 java.util.logging.FileHandler.pattern = log/java%u.log
 java.util.logging.FileHandler.limit = 500000
 java.util.logging.FileHandler.count = 5
@@ -33,17 +32,9 @@ java.util.logging.FileHandler.level = CONFIG
 java.util.logging.ConsoleHandler.level = FINER
 java.util.logging.ConsoleHandler.formatter = util.log.ConsoleLogFormatter
 
-# log errors (exceptions)
+# Log errors (exceptions)
 util.log.ErrorLogHandler.pattern = log/error%u.log
 util.log.ErrorLogHandler.count = 5
 util.log.ErrorLogHandler.formatter = java.util.logging.SimpleFormatter
 util.log.ErrorLogHandler.filter = util.log.ErrorFilter
 util.log.ErrorLogHandler.level = CONFIG
-
-############################################################
-# Facility specific properties.
-# Provides extra control for each logger.
-############################################################
-
-# For example, set the com.xyz.foo logger to only log SEVERE messages:
-#com.xyz.foo.level = CONFIG
