--- a/GameOne_Commons/configs/Threads.properties
+++ b/GameOne_Commons/configs/Threads.properties
@@ -1,15 +1,9 @@
-# Determines the amount of scheduled thread pools. If set to -1, the server will decide the amount depending on the available processors.
+# Specifies how many threads will be in scheduled thread pool.
+# If set to -1 (which is recommended), the server will decide the amount depending on the available processors.
 # Default: -1
-ScheduledThreadPoolCount = -1
+ScheduledThreadPoolSize = -1
 
-# Specifies how many threads will be in a single scheduled pool.
-# Default: 4
-ThreadsPerScheduledThreadPool = 4
-
-# Determines the amount of instant thread pools. If set to -1, the server will decide the amount depending on the available processors.
+# Specifies how many threads will be in instant thread pool.
+# If set to -1 (which is recommended), the server will decide the amount depending on the available processors.
 # Default: -1
-InstantThreadPoolCount = -1
-
-# Specifies how many threads will be in a single instant pool.
-# Default: 2
-ThreadsPerInstantThreadPool = 2
+InstantThreadPoolSize = -1
