Server cleanup part I, also small fix for Access DB.

--- a/GameOne_Server/configs/Server.properties
+++ b/GameOne_Server/configs/Server.properties
@@ -2,5 +2,5 @@
 MaximumOnlineUsers = 100
 
 # Use this option to choose whether accounts will be created automatically or not.
-# Default: False
+# Default: True
 AutoCreateAccounts = True
