--- a/GameOne_Server/configs/Database.properties
+++ b/GameOne_Server/configs/Database.properties
@@ -1,10 +1,12 @@
 #=============================================================
 #                          Global
 #=============================================================
-# Maximum database connections (minimum 10, default).
+# Maximum database connections (minimum 10).
+# Default: 10
 MaximumDbConnections = 10
 
-# Idle connections expiration time (0 = never expire, default).
+# Idle connections expiration time (minimum 0 = never expire).
+# Default: 0
 MaximumDbIdleTime = 0
 
 #=============================================================
