--- a/GameOne_Server/configs/Deadlock.properties
+++ b/GameOne_Server/configs/Deadlock.properties
@@ -1,11 +1,11 @@
-# Dead Lock Detector (a separate thread for detecting deadlocks).
-# For improved crash logs and automatic restart in deadlock case if enabled.
-# Check interval is in seconds.
+# Enable deadlock detector (a separate thread for detecting deadlocks).
 # Default: True
 DeadLockDetector = True
 
+# Every how many seconds to check for deadlocks (minimum 1).
 # Default: 20
 DeadLockCheckInterval = 20
 
+# If enabled a server restart will be issued when a deadlock is detected.
 # Default: False
 RestartOnDeadlock = False
