--- a/GameOne_Server/configs/Network.properties
+++ b/GameOne_Server/configs/Network.properties
@@ -3,5 +3,11 @@
 # Default: True
 EnableUPnP = True
 
-# Default: 777 (lucky number)
+# Port on which to listen to incoming connections (must be positive).
+# Default: 777 (lucky number).
 Port = 777
+
+# URL to get remote IP address from.
+# Has to be a web page which prints only the IP address.
+# Default: https://api.ipify.org/
+RemoteUrl = https://api.ipify.org/
