Some cleanup to checkers. Added Log.properties to build.xml Some update to todo.txt Some javadoc removal.

--- a/GameOne_Client/build.xml
+++ b/GameOne_Client/build.xml
@@ -21,8 +21,7 @@
 				<include name="*.properties" />
 			</fileset>
 			<fileset dir="${commons}/configs">
-				<include name="log.cfg" />
-				<include name="Threads.properties" />
+				<include name="*.properties" />
 			</fileset>
 		</copy>
 		<copy todir="${build.dist}/images">
