--- a/GameOne_Server/build.xml
+++ b/GameOne_Server/build.xml
@@ -32,8 +32,7 @@
 				<include name="*.properties" />
 			</fileset>
 			<fileset dir="${commons}/configs">
-				<include name="log.cfg" />
-				<include name="Threads.properties" />
+				<include name="*.properties" />
 			</fileset>
 		</copy>
 		<copy todir="${build.dist}/sql">
