Database will now install automatically if it doesn't exist. Removed database installer scripts. Prefs.reg moved to client. Small fix to database sync incase a table is empty.

--- a/GameOne_Server/configs/Database.properties
+++ b/GameOne_Server/configs/Database.properties
@@ -12,7 +12,8 @@ MaximumDbIdleTime = 0
 #=============================================================
 #                          MySql
 #=============================================================
-MysqlUrl = jdbc:mysql://localhost/gameOne
+MysqlDbName = gameOne
+MysqlUrl = jdbc:mysql://localhost/
 MysqlLogin = root
 MysqlPassword = 
 
